Add empty main program.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ set(POPLAR_LINK_LIBRARIES -lpoplin -lpopnn -lpoplar -lpopops -lpoputil -lpoprand
 add_compile_definitions(POPC_PREFIX="${PROJECT_SOURCE_DIR}")
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/tests)
+add_subdirectory(${PROJECT_SOURCE_DIR}/src/main)
