--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "external/glm"]
 	path = external/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "external/videolib"]
+	path = external/videolib
+	url = https://github.com/markp-gc/videolib.git
+[submodule "external/packetcomms"]
+	path = external/packetcomms
+	url = https://github.com/mpups/packetcomms.git
