--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,11 @@ set(POPLAR_LINK_LIBRARIES -lpoplin -lpopnn -lpoplar -lpopops -lpoputil -lpoprand
 # path to give us a prefix to start from:
 add_compile_definitions(POPC_PREFIX="${PROJECT_SOURCE_DIR}")
 
-# Libraries:
+# External Libraries:
+add_subdirectory(external/packetcomms)
+add_subdirectory(external/videolib)
+
+# Internal libraries:
 add_subdirectory(${PROJECT_SOURCE_DIR}/src/splat)
 
 # Executables:
