--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -3,6 +3,8 @@ message(STATUS "Adding splat executable: ${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_executable(splat splat.cpp)
 target_link_libraries(splat
+  ${PACKETCOMMS_LIBRARIES}
+  ${VIDEOLIB_LIBRARIES}
   Boost::program_options
   ${OpenCV_LIBS}
   OpenMP::OpenMP_CXX
